--- a/FPX/Editor/EditorMainWindow.xaml
+++ b/FPX/Editor/EditorMainWindow.xaml
@@ -4,14 +4,27 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:FPX.Editor"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             mc:Ignorable="d" Height="425.746" Width="858.21">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="773*"/>
             <ColumnDefinition Width="19*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="209,234,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Menu x:Name="menu" Height="27" VerticalAlignment="Top" Grid.ColumnSpan="2" RenderTransformOrigin="0.5,0.5">
+            <MenuItem Header="File" Height="27" Width="100">
+                <ListBoxItem Content="New"/>
+                <Separator/>
+                <ListBoxItem Content="Load"/>
+                <ListBoxItem Content="Save"/>
+            </MenuItem>
+            <MenuItem Header="Edit" Height="27" Width="100"/>
+            <MenuItem Header="View" Height="27" Width="100">
+                <MenuItem Header="Scene"/>
+                <MenuItem Header="Anylizer"/>
+                <MenuItem Header="Hierarchy"/>
+                <MenuItem Header="Content"/>
+            </MenuItem>
+        </Menu>
 
     </Grid>
 </Window>
